Work on homepage
Worked on project cards and styling of navbar

--- a/_layouts/subpage.html
+++ b/_layouts/subpage.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    {% include head.html %}
+    {% include subhead.html %}
   </head>
   <body>
-    {% include header.html %}
+    {% include subheader.html %}
     {{ content }}
     {% include footer.html %}
   </body>
